# Futoshiki

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Futoshiki.out  Makefile  Makefile.old  README.md  cmake_install.cmake  constraint.h  domain.h  file.h  initTest.h  main.c  util.h
grilles/: grille1_5x5.fut
